<resources>
    <string name="app_name">Halloween</string>
    <string name="action_settings">About</string>
    <string name="title_activity_developer">The App Developer</string>
    <string name="title_activity_website">https://www.facebook.com/bossondesign/</string>
    <string name="developer_name">Sean Patterson</string>
    <string name="email">sean@bosson.design</string>
    <string name="bosson">bosson design</string>
    <string name="version_code">App Version 1.2.2 Sept 17, 2023</string>
    <string name="title_activity_secret">You Were Warned</string>
    <string name="secret">Curiosity Killed the Black Cat</string>
    <string name="title_activity_ghost_song">The Ghost Song</string>
    <string name="title_activity_old_tape">OldTapeActivity</string>
    <string name="ghost_song_title">The Ghost Song</string>
    <string name="old_tape_title">The Old Tape</string>
    <string name="chilling_cry">Cries of Insanity</string>
    <string name="cries_from_hell">Cries from Hell</string>
    <string name="privacy">This app may collect anonymous usage data. For more information view our Privacy Policy</string>
    <string name="google_play_store">Check out this awesome Halloween Sounds App in the Google Play Store! https://goo.gl/FiuVHq</string>
    <string name="amazon_store_store">Check out this awesome Halloween Sounds App in the Amazon App Store! https://goo.gl/VriraD</string>
    <string name="secret_description">You curious little devil! You’ve found the hidden sounds. We’ve saved the best for here. The sounds below are audio recordings found deep in the web. These are genuine recordings of mysterious origin and meaning. They are not for the faint of heart and may leave you feeling uneasy, frightened, and paranoid. You have been warned. </string>
    <string name="title_activity_long">Looping Mixes</string>
    <string name="looping_mix_title">Looping Mixes</string>
    <string name="horror_movie_themes">Horror Movie Themes</string>
    <string name="witch_cackle">Witch Cackle</string>
    <string name="black_cat">Black Cat</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="donate">Donate</string>
    <string name="share">Share</string>
    <string name="payment_text">If you love Spooky Halloween Sounds and want to see it getting better each year, why not buy us a coffee so we can keep building</string>
    <string name="don_t_let_them_in">Don\'t Let Them In</string>
    <string name="friday_the_13th">Friday the 13th</string>
    <string name="amityville_horror">Amityville Horror</string>
    <string name="halloweenDate">2023-10-31</string>
    <string name="halloweenTomorrow">2023-10-30</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="tomorrow">Tomorrow is Halloween</string>
    <string name="popup_title">GREAT NEWS!!!</string>
    <string name="popup_text_pause">You can now pause and resume the Looping Mixes and Horror Movie Theme sounds with a button press! Tap to Play. Tap to Pause. Tap again to Resume! Try holding down on a button to restart the sound from the beginning!</string>
    <string name="popup_text_ringtone">You can now set any Spooky Halloween sound as your ringtone! Just press and hold on the sound you want to save then select the sound in your phone\'s settings!</string>
    <string name="ok_button_text">OK</string>
    <string name="permission_denied_message">Permission Denied</string>
    <string name="contact_us">Contact Us</string>
    <string name="nightmare_on_elm_street">Nightmare on Elm Street</string>
    <string name="the_shining">The Shining</string>
    <string name="the_exorcist">The Exorcist</string>
    <string name="halloween">Halloween</string>
</resources>
