<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="design.bosson.spookyhalloweensounds.MovieActivity"
    tools:showIn="@layout/activity_movie">

    <Button
        android:id="@+id/buttonHalloween"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableTop="@drawable/ic_halloween"
        android:elevation="0dp"
        android:fontFamily="@font/creepster"
        android:keepScreenOn="true"
        android:text="@string/halloween"
        app:backgroundTint="@color/colorTitle"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/buttonExorcist"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/buttonHalloween"
        android:drawableTop="@drawable/ic_cross"
        android:elevation="0dp"
        android:fontFamily="@font/creepster"
        android:keepScreenOn="true"
        android:text="@string/the_exorcist"
        android:backgroundTint="@color/colorTitle"
        tools:ignore="MissingPrefix" />
    <Button
        android:id="@+id/buttonShining"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/buttonExorcist"
        android:drawableTop="@drawable/ic_axe"
        android:elevation="0dp"
        android:fontFamily="@font/creepster"
        android:keepScreenOn="true"
        android:text="@string/the_shining"
        android:backgroundTint="@color/colorTitle"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/buttonElmStreet"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/buttonShining"
        android:drawableTop="@drawable/ic_krueger"
        android:elevation="0dp"
        android:fontFamily="@font/creepster"
        android:keepScreenOn="true"
        android:text="@string/nightmare_on_elm_street"
        android:backgroundTint="@color/colorTitle"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/buttonFriday"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/buttonElmStreet"
        android:drawableTop="@drawable/ic_vorhees"
        android:elevation="0dp"
        android:fontFamily="@font/creepster"
        android:keepScreenOn="true"
        android:text="@string/friday_the_13th"
        android:backgroundTint="@color/colorTitle"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/buttonAmityville"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/buttonFriday"
        android:drawableTop="@drawable/ic_amityville"
        android:elevation="0dp"
        android:fontFamily="@font/creepster"
        android:keepScreenOn="true"
        android:text="@string/amityville_horror"
        android:backgroundTint="@color/colorTitle"
        tools:ignore="MissingPrefix" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        android:paddingTop="15dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_below="@+id/buttonAmityville">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/graveyard"
            android:scaleType="fitStart"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>