<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="design.bosson.spookyhalloweensounds.SecretActivity"
    tools:showIn="@layout/activity_secret">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/creepster"
            android:text="@string/secret_description"
            android:textColor="@color/colorTitle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonTheGhostSong"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/textDescription"
            android:drawableTop="@drawable/ghost_song"
            android:elevation="0dp"
            android:fontFamily="@font/creepster"
            android:keepScreenOn="true"
            android:text="@string/ghost_song_title"
            app:backgroundTint="@color/colorTitle"
            tools:ignore="MissingPrefix"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/buttonTheOldTape"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/buttonTheGhostSong"
            android:drawableTop="@drawable/old_tape"
            android:elevation="0dp"
            android:fontFamily="@font/creepster"
            android:text="@string/old_tape_title"
            app:backgroundTint="@color/colorTitle"
            tools:ignore="MissingPrefix"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/buttonChillingCries"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/buttonTheOldTape"
            android:drawableTop="@drawable/dispair"
            android:elevation="0dp"
            android:fontFamily="@font/creepster"
            android:text="@string/chilling_cry"
            app:backgroundTint="@color/colorTitle"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/buttonCriesFromHell"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/buttonChillingCries"
            android:drawableTop="@drawable/cries_hell"
            android:elevation="0dp"
            android:fontFamily="@font/creepster"
            android:text="@string/cries_from_hell"
            app:backgroundTint="@color/colorTitle"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:id="@+id/imageOrangeSkull"
            android:layout_width="match_parent"
            android:layout_height="313dp"
            android:layout_below="@+id/buttonCriesFromHell"
            android:layout_marginTop="7dp"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/orange_skull" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>